--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-2021의 새로운 모습
-main 이라는 브랜치가 보임
-
-
 <!doctype html>
-
-<html lang="en">
-
+<html lang="ko">
 <head>
     <meta charset="utf-8">
     <title>Inspecting CSS</title>
@@ -61,6 +55,10 @@ main 이라는 브랜치가 보임
           <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
             tomatillo
             melon azuki bean garlic.</p>
+            <p>
+                2021의 새로운 모습
+                main 이라는 브랜치가 보임
+            </p>
         </div>
 
         <div class="box2">
