--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Inspecting CSS</title>
-
+    <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" >
     <style>
         body {
             background-color: #fff;
