--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             padding: 0;
             margin: 0;
         }
+
+        a {
+            outline: none;
+            text-decoration: none;
+            padding: 2px 1px 0;
+        }
+
         .container {
             padding: 5px 10px;
             max-width: 900px;
