--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p> 추천게시물이 뭔지 설명해줌  </p>
             <table>
                 <tr><td width="85%">블라블라</td><td>2021.01.01</td></tr>
-                <tr><td>블라블라</td><td>2021.01.01</td></tr>
+                <tr><td><a href="detail.html">블라블라</a></td><td>2021.01.01</td></tr>
                 <tr><td>블라블라</td><td>2021.01.01</td></tr>
                 <tr><td>블라블라</td><td>2021.01.01</td></tr>
             </table>
