--- a/detail.html
+++ b/detail.html
@@ -4,16 +4,9 @@
     <meta charset="utf-8">
     <title>Inspecting CSS</title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
+    <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
     <style>
-        body {
-            background-color: #fff;
-            color: #333;
-            font: 0.9em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-            padding: 0;
-            margin: 0;
-        }
-
         .container {
             padding: 5px 10px;
             max-width: 900px;
