--- a/index.html
+++ b/index.html
@@ -4,21 +4,9 @@
     <meta charset="utf-8">
     <title>Inspecting CSS</title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
+    <link rel="stylesheet" href="static/tag.css" >
+    <link rel="stylesheet" href="static/a_style.css" >
     <style>
-        body {
-            background-color: #fff;
-            color: #333;
-            font: 0.9em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-            padding: 0;
-            margin: 0;
-        }
-
-        a {
-            outline: none;
-            text-decoration: none;
-            padding: 2px 1px 0;
-        }
-
         .container {
             padding: 5px 10px;
             max-width: 900px;
@@ -93,7 +81,7 @@
         <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
             <img src="static/jhm.png" style="width:66px;height:66px;" />
             <ul>
-                <li> <a href="/">community type</a> </li><li> <a href="/">menu1</a> </li>
+                <li> <a href="index.html">community type</a> </li><li> <a href="/">menu1</a> </li>
             </ul>
         </div>
     </div>
