application for somewhere

--- a/detail.html
+++ b/detail.html
@@ -6,12 +6,8 @@
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
+    <link rel="stylesheet" href="static/layout.css" >
     <style>
-        .container {
-            padding: 5px 10px;
-            max-width: 900px;
-            margin: 10px auto;
-        }
 
         .container-head {
             padding: 5px;
