--- a/detail.html
+++ b/detail.html
@@ -40,24 +40,7 @@
           border-radius: .5em;
         }
 
-        /* ---//  menu    */
-        .pc_header_gnb {
-            background-color: #eef;
-            height:66px;
-            margin: 0 0 10px 0;
-        }
 
-        .pc_header_gnb ul {
-            display:inline-block;
-            list-style:none;
-        }
-
-        .pc_header_gnb ul li {
-            float:left;
-            width:120px;
-            vertical-align:center;
-        }
-        /*  ---// menu    */
 
     </style>
 
@@ -82,36 +65,36 @@
         <div  class="box_800">
             <h2> 안녕하세요~ 000인 000입니다.</h2>
 
-            <h3 id="choose-a-bank">Choose a bank</h3>
+            <h3  >Choose a bank</h3>
              <p> 당신의 히스토리를 입력하세요~
                  Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
                 tomatillo
                 melon azuki bean garlic.</p>
 
-            <h3 id="choose-a-bank">Choose a bank</h3>
+            <h3  >Choose a bank</h3>
             <p> 당신의 히스토리를 입력하세요~
             Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
             tomatillo
             melon azuki bean garlic.</p>
 
-            <h3 id="choose-a-bank">Choose a bank</h3>
+            <h3  >Choose a bank</h3>
             <p> 당신의 히스토리를 입력하세요~
             Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
             tomatillo
             melon azuki bean garlic.</p>
-            <h3 id="choose-a-bank">Choose a bank</h3>
+            <h3  >Choose a bank</h3>
              <p> 당신의 히스토리를 입력하세요~
                  Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
                 tomatillo
                 melon azuki bean garlic.</p>
 
-            <h3 id="choose-a-bank">Choose a bank</h3>
+            <h3  >Choose a bank</h3>
             <p> 당신의 히스토리를 입력하세요~
             Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
             tomatillo
             melon azuki bean garlic.</p>
 
-            <h3 id="choose-a-bank">Choose a bank</h3>
+            <h3  >Choose a bank</h3>
             <p> 당신의 히스토리를 입력하세요~
             Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
             tomatillo
