--- a/index.html
+++ b/index.html
@@ -40,26 +40,6 @@
       border-radius: .5em;
     }
 
-    /* ---//  menu    */
-    .pc_header_gnb {
-        background-color: #eef;
-        height:66px;
-        margin: 0 0 10px 0;
-    }
-
-    .pc_header_gnb ul {
-        display:inline-block;
-        list-style:none;
-    }
-
-    .pc_header_gnb ul li {
-        float:left;
-        width:120px;
-        vertical-align:center;
-    }
-    /*  ---// menu    */
-
-
     </style>
 
 </head><body>
@@ -94,9 +74,9 @@
                 <tr>
                     <td width="85%"><a href="application2.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
-                    <td width="85%"><a href="application3.html"> 어딘가에 지원하기(타임라인버전) </a></td><td>2021.02.04</td></tr>    
+                    <td width="85%"><a href="application3.html"> 어딘가에 지원하기(타임라인버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
-                    <td><a href="detail.html">블라블라</a></td><td>2021.01.01</td></tr>
+                    <td><a href="application4.html">어딘가에 지원하기(tech기반버전) </a></td><td>2021.02.04</td></tr>
                 <tr><td>블라블라</td><td>2021.01.01</td></tr>
                 <tr><td>블라블라</td><td>2021.01.01</td></tr>
             </table>
