--- a/application4.html
+++ b/application4.html
@@ -15,7 +15,7 @@
 
     <div class="container-gnb">
         <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
-            <img src="static/jhm.png" style="width:66px;height:66px;" />
+            <a href="index.html"> <img src="static/jhm.png" style="width:66px;height:66px;" /></a>
             <ul>
                 <li> <a href="/">community type</a> </li><li> <a href="/">menu1</a> </li>
             </ul>
