--- a/detail.html
+++ b/detail.html
@@ -9,38 +9,6 @@
     <link rel="stylesheet" href="static/layout.css" >
     <style>
 
-        .container-head {
-            padding: 5px;
-            max-width: 900px;
-            margin: 0px auto;
-        }
-
-        .container-gnb {
-            padding: 5px 5px;
-            max-width: 900px;
-            margin: 20px auto;
-        }
-
-        .box_title {
-          display:block;
-          /* width: 850px; */
-          height:45px;
-          /*margin: 0 0 15px 0;*/
-          padding: 10px;
-          border: 0.5px solid rgb(175, 170, 174);
-          border-radius: .5em;
-        }
-
-        .box_400 {
-          display:inline-block;
-          width: 400px;
-          margin: 0 5px 5px 0;
-          padding: 20px;
-          border: 0.5px solid rgb(175, 174, 174);
-          border-radius: .5em;
-        }
-
-
 
     </style>
 
@@ -48,18 +16,13 @@
 
     <div class="container-gnb">
         <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
-            <img src="static/jhm.png" style="width:66px;height:66px;" />
+            <a href="index.html"><img src="static/jhm.png" style="width:66px;height:66px;" /></a>
             <ul>
                 <li> <a href="/">community type</a> </li><li> <a href="/">menu1</a> </li>
             </ul>
         </div>
     </div>
 
-    <!-- <div class="container-head">
-        <div  class="box_title">
-            <p> 제목입니다..</p>
-        </div>
-    </div> -->
 
     <div class="container">
         <div  class="box_800">
