--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
         margin: 20px auto;
     }
 
-    .container-gnb {
-        padding: 5px 5px;
-        max-width: 900px;
-        margin: 20px auto;
-    }
-
     .box_800 {
       display:block;
       /* width: 850px; */
@@ -66,33 +60,28 @@
 
     <div class="container">
         <div  class="box_400">
-            <h5> 내 게시물 </h5>
-            <p> 나의 생각정리 </p>
+            <h5> 나를 뽑내봐 </h5>
+            <p> 이력서용 공간 계속 꾸며야할 겁니다. </p>
             <table>
                 <tr>
                     <td width="85%"><a href="application.html"> 어딘가에 지원하기(러프버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
-                    <td width="85%"><a href="application2.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
+                    <td><a href="application2.html"> 어딘가에 지원하기(정식버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
-                    <td width="85%"><a href="application3.html"> 어딘가에 지원하기(타임라인버전) </a></td><td>2021.02.04</td></tr>
+                    <td><a href="application3.html"> 어딘가에 지원하기(타임라인버전) </a></td><td>2021.02.04</td></tr>
                 <tr>
                     <td><a href="application4.html">어딘가에 지원하기(tech기반버전) </a></td><td>2021.02.04</td></tr>
-                <tr><td>블라블라</td><td>2021.01.01</td></tr>
-                <tr><td>블라블라</td><td>2021.01.01</td></tr>
             </table>
         </div>
 
         <div  class="box_400">
-            <h5> 추천게시물 </h5>
-             <p>
-                  2021의 새로운 모습
-                  main 이라는 브랜치가 보임111
-              </p>
+            <h5> 나의 게시물 </h5>
+             <p> 여러가지 기본에 대한글  </p>
               <table>
-                  <tr><td width="85%">블라블라</td><td>2021.01.01</td></tr>
-                  <tr><td>블라블라</td><td>2021.01.01</td></tr>
-                  <tr><td>블라블라</td><td>2021.01.01</td></tr>
-                  <tr><td>블라블라</td><td>2021.01.01</td></tr>
+                  <tr><td width="85%"> <a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
+                  <tr><td><a href="life1.html"> 인생의 명언 </a></td><td>2021.01.01</td></tr>
+                  <tr><td><a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
+                <tr><td><a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
               </table>
         </div>
 
