--- a/application2.html
+++ b/application2.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> 어딘가에 지원하기 1 </title>
+    <title> 어딘가에 지원하기 2 </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
@@ -27,6 +27,9 @@
             <p> 책임감이 강하고 일정을 최대한 지키려 노력하는 노력형 프로그래머 입니다.
                 문제해결 능력이 뛰어나며 커뮤니케이션의 중요성을 누구보다 잘 아는 직장인입니다.
                 다룰 수 있는 기술은 javascript, html5, jquery, css, php , nginx, oracle, mysql, aws구성, 시스템 프로세스 만들기,ubuntu, 파이썬 초급 입니다.
+                기술을 모르는 사람에게 친절하게 응답하고 기술을 잘 아는 사람에게는 성실히 질문하는 스타일입니다.
+                십년간 it계열에 있으면서 많은 서비스를 경험했고 개발하였습니다.
+                모든 것을 다 개발할 수는 없지만 웹과 웹서버상에서 발생하는 문제들을 해결하려고 노력합니다.
             </p>
 
             <h3 id="choose-a-bank"> 2006- 2008 </h3>
@@ -38,28 +41,32 @@
             </p>
 
             <h3 id="choose-a-bank">2008 - 2009 </h3>
-            <p> 삼성경제연구소에 계약직으로 들어갔다. 첫회사에서 얻은 지식은 우회해서 배운곳 ..여기서부터 시작했다면 첫회사가 그리 힘들진 않았을 듯
-                윈도우서버를 사용했고 php와 mysql을 사용하기 시작했다. 세리닷컴 외에도 여러 서비스를 하고 있던 곳이라 많이 배웠는데
-                여기서 기획자와 커뮤니케이션이란게 힘들다는 것을 첨으로 배웠다.
+            <p> 삼성경제연구소에 계약직으로 들어갔습니다. 첫 회사에서 얻은 지식은 우회해서 배운곳입니다.
+                여기서부터 시작했다면 첫회사가 그리 힘들진 않았을 듯할 정도로 기본을 배운 곳입니다.
+                윈도우 웹서버를 사용했고 php와 mysql을 사용하기 시작했습니다. 세리닷컴 외에도 여러 서비스를 하고 있던 곳이라 많이 배웠는데
+                여기서 기획자와 커뮤니케이션이란게 힘들다는 것을 첨으로 배웠습니다.
             </p>
             <h3 id="choose-a-bank">2010 - 2011 </h3>
-             <p> 여행사 사이트 관리로 들어갔는데 여기서 처음으로 내가 처음부터 끝까지 사이트를 만드는 경험을 해보았다. 그전에는 다들 뭔가 기반이 있었고 거기에
-             수정을 가하고 기능을 추가하는 것들 위주였는데 처음으로 기획자와 나 디자이너 셋이서 만든 사이트. 어떤 사이트 였냐면 작은 자유 여행 상품들을
-             장바구니에 담아 주문을 하는 기능으로 기억한다.
-              </p>
+            <p> 여행사 사이트 관리로 들어갔는데 여기서 처음으로 제가 처음부터 끝까지 사이트를 만드는 경험을 해보았습니다.
+                그전에는 다들 뭔가 기반이 있었고 거기에 수정을 가하고 기능을 추가하는 것들 위주였는데 처음으로 기획자와 나 디자이너 셋이서 만든 사이트입니다.
+                어떤 사이트 였냐면 작은 자유 여행 상품들을 장바구니에 담아 주문을 하는 기능으로 기억합니다.
+            </p>
             <h3 id="choose-a-bank">2012-2013 </h3>
-            <p> 다망의 티켓몬스터. 아마도 내가 간 업체중에 젤 큰기업 이리라. 큰 맘먹고 가서 많은 기술과 경험을 한 곳이다. 여기서 git도 배우고 리눅스에 대해
-                좀더 심층적으로 생각했던 것 같다. 개발자가 많아서 좋았고 많아서 힘들었던 여기서 파이선을 첨 접해보긴 했다.
-                쇼핑이 이렇게도 복잡할 수 있구나 경험을 한 곳이기도 하다. 여기를 겪어서 그런지 쇼핑몰이 작게 되는게 신기하다.
+            <p> 대망의 티켓몬스터. 아마도 제가 입사한 업체 중에 제일 큰 기업이라 생각합니다.
+                큰 맘먹고 가서 많은 기술과 경험을 한 곳 입니다. 여기서 git도 배우고 리눅스에 대해 좀 더 심층적으로 생각했습니다.
+                개발자가 많아서 좋았고 많아서 힘들었던 여기서 파이선을 첨 접해 보았습니다.
+                쇼핑이 이렇게도 복잡할 수 있구나 경험을 한 곳이기도 합니다. 여기를 겪어서 그런지 쇼핑몰이 작게 되는게 신기하기만 할 뿐 입니다.
             </p>
             <h3 id="choose-a-bank"> 2013-2014</h3>
-            <p> 부동산 경매에 대해서 배워보고 싶었고 그걸로 돈을 버는 회사가 신기했습니다. 유료서비스라는 것을 경험했고 여러가지 버그를 수정하고
-                여기서 배운건 경매 프로세스 입니다.
+            <p> 부동산 경매에 대해서 배워보고 싶었고 그걸로 돈을 버는 회사가 신기해서 입사하게 되었습니다.
+                인터넷 상의 유료서비스라는 것을 처음 경험했고 여러가지 버그를 수정하고 여기서 배운 건 경매 프로세스 입니다.
+                크롤링을 처음 접한 곳이기도 합니다.
             </p>
             <h3 id="choose-a-bank"> 2015-2016</h3>
-            <p> 키위트리 - 드디어 스타트업이라는 곳에 발을 디딘 순간이였습니다. 저보다 나이 어린 친구가 사장이였고 팀원들과 돈독한 관계를 가질 수
-                있었던 따뜻한 경험이였습니다. 육아교육 사이트를 만드는 부분이라 웹적인 부분은 문제가 없었으나 한글 문서를 변환하는 과정에서 문제가 생겨
-                사업을 접었던 저의 스타트업 경험이였습니다.
+            <p> 키위트리 - 드디어 스타트업이라는 곳에 발을 디딘 순간이였습니다.
+                저보다 나이 어린 친구가 사장이였고 팀원들과 돈독한 관계를 가질 수있었던 따뜻한 경험이였습니다.
+                육아교육 사이트를 만드는 부분이라 웹적인 부분은 문제가 없었으나 한글 문서를 변환하는 과정에서 문제가 생겨 사업을 접었던
+                저의 스타트업 경험이였습니다.
             </p>
             <h3 id="choose-a-bank"> 2016- 2017</h3>
             <p> 웹소설이라는 신세계을 알려준 곳. 노후화된 코딩과 신개념 코딩이 바닷물 처럼 만나면 어떻게 되는지 알려주는 사이트 였습니다.
@@ -68,9 +75,10 @@
             </p>
             <h3 id="choose-a-bank"> 2017- 현재</h3>
             <p> 광고와 마케팅을 배울 수 있었습니다. 여러가지 작은 이벤트에 대한 실력이 쌓이고 이젠 거의 이벤트 고수가 되었다고 감히 말씀드릴 수 있겠습니다.
-                마크업에 대해 기초부터 다시 배우게 되는 계기가 된 곳입니다. 많은 것을 배웠는데 많은 것을 다시 배우게 된 곳.
-                이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 가능한 수준. nginx설정도 건드릴 수 있고, 여러가지 웹서비스도 만들도 있는 수준이라고
-                생각하지만 아직도 부족한게 많고 배울 것 천지라는 것을 안다.
+                마크업에 대해 기초부터 다시 배우게 되는 계기가 된 곳입니다.
+                많은 것을 배웠는데 많은 것을 다시 배우게 된 곳.
+                이제는 aws에다가 리눅스 인스턴스를 켜고 웹서버를 만드는 건 너무 쉬운 수준.
+                nginx설정도 건드릴 수 있고, 여러가지 웹서비스도 만들도 있는 수준이라고 생각하지만 아직도 부족한게 많고 배울 것 천지라는 것을 압니다.
             </p>
         </div>
     </div>
