--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title> now2021</title>
+    <title> WEB PROGRAMMER JH - WELCOME PAGE </title>
     <!-- <link rel="stylesheet" href="//necolas.github.io/normalize.css/8.0.1/normalize.css" > -->
     <link rel="stylesheet" href="static/tag.css" >
     <link rel="stylesheet" href="static/a_style.css" >
@@ -41,10 +41,11 @@
     <div class="container-head">
         <div  class="box_800">
             <p> 안녕하세요 ~ web developer인  jh 입니다.</p>
-            <p> free 인 관계로 프로그래밍 없이 css,javascript,html5로 만 만들어진 web page입니다.<br>
+            <p> 사이트가 free인 관계로 프로그래밍 없이 css,javascript,html5 로 만 만들어진 web page입니다.<br>
                 여러가지 글을 쓸 예정이고 이곳은 2021년에 대한 기록이 될 것입니다.
                 2021년 동안 만들어질 것이라 아직은 미숙한 것이 많습니다.<br>
-                여기는 공지같은 공간이고 주저리 공간입니다.
+                여기는 공지같은 공간이고 주저리 공간입니다. 변명 같지만 SIMPLE IS BEST 입니다 ㅎㅎㅎ <BR>
+                저에게 디자인 감각을 주신다면 좋겠어요 ^^
             </p>
         </div>
     </div>
@@ -53,7 +54,8 @@
         <div id="kakaoGnb" role="navigation" class="pc_header_gnb">
             <img src="static/jhm.png" style="width:66px;height:66px;" />
             <ul>
-                <li> <a href="index.html"> 미래의 메뉴1 </a> </li><li> <a href="/"> 미래의 메뉴2</a> </li>
+                <li> <a href="index.html"> 미래의 메뉴1 </a> </li>
+                <li> <a href="/"> 미래의 메뉴2</a> </li>
             </ul>
         </div>
     </div>
@@ -61,7 +63,7 @@
     <div class="container">
         <div  class="box_400">
             <h5> 나를 뽑내봐 </h5>
-            <p> 이력서용 공간 계속 꾸며야할 겁니다. </p>
+            <p> 이력서용 공간 계속 꾸며야할 겁니다. 다양한 버전을 선보일 예정입니다. </p>
             <table>
                 <tr>
                     <td width="85%"><a href="application.html"> 어딘가에 지원하기(러프버전) </a></td><td>2021.02.04</td></tr>
@@ -76,7 +78,7 @@
 
         <div  class="box_400">
             <h5> 나의 게시물 </h5>
-             <p> 여러가지 기본에 대한글  </p>
+             <p> 여러가지 기본에 대한 글 - 솔직히 적고 싶은데 자꾸 자체 검열이 되네요 </p>
               <table>
                   <tr><td width="85%"> <a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
                   <tr><td><a href="life1.html"> 인생의 명언 </a></td><td>2021.01.01</td></tr>
@@ -143,13 +145,6 @@
     </div>
 
 <script>
-
-var ul = document.querySelector('li');
- //li 엘리먼트중 맨위에 첫번째 객체만을 담는다
- ul.style.color='red';
- var ol = document.querySelectorAll('ol');
- //ol 엘리먼트들을 유사배열로 만든다
- ol[0].style.color='blue';
 
 
 
