--- a/detail.html
+++ b/detail.html
@@ -32,6 +32,7 @@
     </div>
     <!--// 내용 -->
 
+
     <!--  읽고나면 공유하고 싶을거야 -->
         <div class="container">
             <div  class="box_800" >
@@ -44,39 +45,26 @@
 
               <!-- 페이스북 공유 버튼 -->
               <!-- <a id="fb_share_bt" href="javascript:void(0);" onclick="window.open(url_combine_fb, '', 'scrollbars=no, width=600, height=600'); return false;"> -->
-
-              <a id="fb_share_bt" >
-                  <img src="https://edgeranklab.com/images/share/facebook.gif" title="페이스북으로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
-
+              <a id="fb_share_bt" ><img src="https://edgeranklab.com/images/share/facebook.gif" title="페이스북으로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
               <!-- 트위터 공유 버튼 -->
-              <a id="tw_share_bt" >
-                  <img src="https://edgeranklab.com/images/share/twitter.gif" title="트위터로 공유하기" class="sharebtn_custom" style="width: 42px;">
-              </a>
-
+              <a id="tw_share_bt" ><img src="https://edgeranklab.com/images/share/twitter.gif" title="트위터로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
               <!-- 카카오 스토리 공유 버튼 -->
-              <a id="kakao_story_share_bt" >
-                  <img src="https://edgeranklab.com/images/share/kakaostory.gif" title="카카오스토리로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
-
+              <a id="kakao_story_share_bt" ><img src="https://edgeranklab.com/images/share/kakaostory.gif" title="카카오스토리로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
               <!-- 네이버 공유 버튼 -->
-              <a id="naver_share_bt" >
-                  <img src="https://edgeranklab.com/images/share/naverblog.gif" title="네이버블로그로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
-
+              <a id="naver_share_bt" ><img src="https://edgeranklab.com/images/share/naverblog.gif" title="네이버블로그로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
               <!-- 밴드 공유 버튼 -->
-              <a id="naver_band_bt" >
-                  <img src="https://edgeranklab.com/images/share/band.gif" title="밴드로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
-
+              <a id="naver_band_bt" ><img src="https://edgeranklab.com/images/share/band.gif" title="밴드로 공유하기" class="sharebtn_custom" style="width: 42px;"></a>
               <a href="javascript:void(0);" id="kakao_link_btn">
                   <!-- 버튼이 생기는 부분, id는 맘대로 쓰시되 아래 js 코드도 동일하게 적용해주셔야 합니다. -->
-              <img src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" title="카카오톡으로 공유하기"  style="width: 42px;" /> <!-- 톡 이미지 부분이고, 전 kakaolink_btn_small.png로 불러왔습니다.   -->
+                  <img src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" title="카카오톡으로 공유하기"  style="width: 42px;" />
+                  <!-- 톡 이미지 부분이고, 전 kakaolink_btn_small.png로 불러왔습니다.   -->
               </a>
-
-
-
             </div>
         </div>
-    <!-- // 공유 -->
-<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-<script src="static/sns_share.js"></script>
+
+        <!-- // 공유 -->
+        <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+        <script src="static/sns_share.js"></script>
 
 
 
