--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <table>
                   <tr><td width="85%"> <a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
                   <tr><td><a href="life1.html"> 인생의 명언 </a></td><td>2021.01.01</td></tr>
-                  <tr><td><a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
+                  <tr><td><a href="taste.html"> 취향테스트 </a></td><td>2021.01.01</td></tr>
                 <tr><td><a href="basic1.html"> web의기본 </a></td><td>2021.01.01</td></tr>
               </table>
         </div>
