--- a/life1.html
+++ b/life1.html
@@ -28,8 +28,8 @@
         <div  class="box_800">
             <h2> 안녕하세요~ 000인 000입니다.</h2>
 
-            <h3  >Choose a bank</h3>
-             <p> 당신의 히스토리를 입력하세요~
+            <h3>Choose a bank</h3>
+             <p> 너무 많은 선택지는 안준만 못하다 .
                  Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi
                 tomatillo
                 melon azuki bean garlic.</p>
