--- a/basic1.html
+++ b/basic1.html
@@ -31,6 +31,7 @@
             <h3> HTML </h3>
             <p>  Hyper Text Markup Language
                  HTML은 웹페이지의 큰 뼈대를 제공
+                 <a href="https://html.spec.whatwg.org/" target="_blank"> https://html.spec.whatwg.org/</a>
             </p>
 
             <h3> CSS </h3>
